these are the new changes

--- a/version-control.html
+++ b/version-control.html
@@ -12,6 +12,7 @@
     </header>
     <main class="git-commands">
         <div class="git-commands__command">git init</div>
+        <div class="git-commands__command">This is a new div</div>
         <div class="git-commands__effect">create a hidden directory and enables version control on the project</div>
     </main>
 </body>
