--- a/version-control.html
+++ b/version-control.html
@@ -14,6 +14,7 @@
         <div class="git-commands__command">git init</div>
         <div class="git-commands__command">This is a new div</div>
         <div class="git-commands__effect">create a hidden directory and enables version control on the project</div>
+        <div class="git-commands__effect">new version</div>
     </main>
 </body>
 </html>
