--- a/version-control.html
+++ b/version-control.html
@@ -18,6 +18,8 @@
         <div class="git-commands__effect">new version</div>
 
         <div class="git-commands__effect">hello, this is new, pull from main</div>
+
+        <div class="git-commands__effect">hello, this is new, pull from main, new new</div>
     </main>
 </body>
 </html>
